--- a/basic/sass/style.scss
+++ b/basic/sass/style.scss
@@ -75,7 +75,6 @@ header{
     }
     
     & .menu{
-        height: 100%;
         margin: 0 0 1px 0;
         padding: 0;
         list-style: none;
@@ -118,6 +117,7 @@ header{
         
         @media (min-width:750px){
             width: auto;
+            height: 100%;
         }
     }
 }
@@ -135,7 +135,7 @@ header{
     }
     
     & main{
-        height: $main_height;
+        
         width: $main_width;
         padding: 0 20px;
         order: 1;
@@ -149,7 +149,7 @@ header{
             font-weight: 700;
         }
         
-        & div{
+        & .content{
             
             & img{
                 width: 100%;
@@ -173,6 +173,35 @@ header{
             }
            
         }
+        & .prefooter{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            
+            margin-bottom: 1em;
+            
+            & ul {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                background-color: #e6e6e6;
+                border-radius: 0.3em;
+                & li{
+                    width: 1em;
+                    height: 1em;
+                    margin: 5px;
+                    border-radius: 50%;
+                    background-color: #fff;
+                    display: inline-block;
+                    & a{
+                        display: block;
+                        width: inherit;
+                        height: inherit;
+                    }
+                }
+            }
+        }
         
         @media (min-width: 750px){
             width: 74%;
@@ -182,7 +211,7 @@ header{
     & nav{
         display: flex;
         flex-flow: row wrap;
-        margin-top: 4em;
+        margin-top: 0;
         min-height: $nav_min_height;
         width: $nav_width;
         order: 2;
@@ -233,6 +262,7 @@ header{
         
         @media (min-width: 750px){
             width: $nav_min_width;
+            margin-top: 4em;
         }
     }
 }
