--- a/basic/stylesheets/style.css
+++ b/basic/stylesheets/style.css
@@ -68,14 +68,13 @@ header .logo {
 }
 /* line 77, ../sass/style.scss */
 header .menu {
-  height: 100%;
   margin: 0 0 1px 0;
   padding: 0;
   list-style: none;
   width: 100%;
   border-top: solid 1px rgba(0, 0, 0, 0.3);
 }
-/* line 85, ../sass/style.scss */
+/* line 84, ../sass/style.scss */
 header .menu .menu_list, header .menu .menu_list a {
   display: flex;
   justify-content: center;
@@ -83,22 +82,22 @@ header .menu .menu_list, header .menu .menu_list a {
   width: 100%;
 }
 @media (min-width: 750px) {
-  /* line 85, ../sass/style.scss */
+  /* line 84, ../sass/style.scss */
   header .menu .menu_list, header .menu .menu_list a {
     height: 100%;
   }
 }
-/* line 96, ../sass/style.scss */
+/* line 95, ../sass/style.scss */
 header .menu .menu_list {
   padding: 10px 0;
   border-bottom: solid 1px rgba(0, 0, 0, 0.3);
   transition: hover .2s;
 }
-/* line 101, ../sass/style.scss */
+/* line 100, ../sass/style.scss */
 header .menu .menu_list:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
-/* line 105, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 header .menu .menu_list a {
   text-decoration: none;
   line-height: 1.2em;
@@ -106,7 +105,7 @@ header .menu .menu_list a {
   color: #f5f5f5;
 }
 @media (min-width: 750px) {
-  /* line 96, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   header .menu .menu_list {
     display: inline-block;
     padding: 0 10px;
@@ -117,6 +116,7 @@ header .menu .menu_list a {
   /* line 77, ../sass/style.scss */
   header .menu {
     width: auto;
+    height: 100%;
   }
 }
 
@@ -137,7 +137,6 @@ header .menu .menu_list a {
 }
 /* line 137, ../sass/style.scss */
 .container main {
-  height: 100%;
   width: 100%;
   padding: 0 20px;
   order: 1;
@@ -152,27 +151,58 @@ header .menu .menu_list a {
   font-weight: 700;
 }
 /* line 154, ../sass/style.scss */
-.container main div img {
+.container main .content img {
   width: 100%;
   max-height: 500px;
   padding-bottom: 40px;
 }
 /* line 160, ../sass/style.scss */
-.container main div section {
+.container main .content section {
   padding-bottom: 1em;
 }
 /* line 162, ../sass/style.scss */
-.container main div section h3 {
+.container main .content section h3 {
   color: #369;
   margin: 0;
 }
 /* line 166, ../sass/style.scss */
-.container main div section p {
+.container main .content section p {
   margin: 5px 0;
   text-align: left;
   line-height: 30px;
   font-size: 1.3em;
   font-weight: 500;
+}
+/* line 176, ../sass/style.scss */
+.container main .prefooter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1em;
+}
+/* line 184, ../sass/style.scss */
+.container main .prefooter ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #e6e6e6;
+  border-radius: 0.3em;
+}
+/* line 190, ../sass/style.scss */
+.container main .prefooter ul li {
+  width: 1em;
+  height: 1em;
+  margin: 5px;
+  border-radius: 50%;
+  background-color: #fff;
+  display: inline-block;
+}
+/* line 197, ../sass/style.scss */
+.container main .prefooter ul li a {
+  display: block;
+  width: inherit;
+  height: inherit;
 }
 @media (min-width: 750px) {
   /* line 137, ../sass/style.scss */
@@ -181,22 +211,22 @@ header .menu .menu_list a {
     padding-left: 50px;
   }
 }
-/* line 182, ../sass/style.scss */
+/* line 211, ../sass/style.scss */
 .container nav {
   display: flex;
   flex-flow: row wrap;
-  margin-top: 4em;
+  margin-top: 0;
   min-height: 100px;
   width: 100%;
   order: 2;
   background-color: white;
   padding: 0 20px;
 }
-/* line 192, ../sass/style.scss */
+/* line 221, ../sass/style.scss */
 .container nav article {
   padding: 20px 0;
 }
-/* line 195, ../sass/style.scss */
+/* line 224, ../sass/style.scss */
 .container nav article a {
   text-decoration: none;
   max-width: 300px;
@@ -205,43 +235,44 @@ header .menu .menu_list a {
   color: #000;
   transition: color .01s linear;
 }
-/* line 203, ../sass/style.scss */
+/* line 232, ../sass/style.scss */
 .container nav article a img {
   width: 85px;
   height: 85px;
 }
-/* line 208, ../sass/style.scss */
+/* line 237, ../sass/style.scss */
 .container nav article a div {
   padding-left: 10px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
 }
-/* line 214, ../sass/style.scss */
+/* line 243, ../sass/style.scss */
 .container nav article a div h4 {
   margin: 0;
   padding: 0 10px 0 0;
   line-height: 16px;
   font-size: 16px;
 }
-/* line 221, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 .container nav article a div span {
   align-self: flex-start;
   line-height: 0.9em;
   font-size: 0.9em;
 }
-/* line 228, ../sass/style.scss */
+/* line 257, ../sass/style.scss */
 .container nav article a:hover {
   color: #369;
 }
 @media (min-width: 750px) {
-  /* line 182, ../sass/style.scss */
+  /* line 211, ../sass/style.scss */
   .container nav {
     width: 320px;
+    margin-top: 4em;
   }
 }
 
-/* line 239, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 footer {
   display: flex;
   justify-content: center;
